# MicMuter

./: .gitignore  CMakeLists.txt  MicMuter.sln  Readme.md
MicMuter/: MicMuter.cpp  MicMuter.rc  MicMuter.vcxproj  MicMuter.vcxproj.filters  resource.h
